# PersonalNotes

AssemblyProgram/: hello.s
BMBInf/: inference.py
CPP/: 1. extern "C".md  2. c++ 异常机制.md  C++ 中类型相关操作.md  vector遍历删除元素.md  杂记.md
CPP/code/: a.out  test.cc
CUDA/: 1. cuda_stream.md  2.NVIDIA Nsight Systems.md  cudatookit.md  其他资源汇总.md  常用设置.md
CUDA/code/2/2.2/: CMakeLists.txt  matrix_add.cu
CUDNN/: Minimal cuDNN C++ Example.md
CUDNN/code/: CMakeLists.txt  minima_cudnn_cpp_example.cc
Cublas/: README.md  a.out  cublas_gemm_example.cu
DeepLearning/NLP/: Attenion is all you need 论文 pytorch 复现.ipynb  Word Embeding.ipynb  extra_word.txt  jieba分词工具.ipynb  transformer.ipynb  transformer.py  学习笔记综述.ipynb  经典论文复现Transformer(代码篇).ipynb  经典论文复现Transformer(理论篇).ipynb
DeepLearning/Quantization Model/: 模型量化.md
Docker/: 常用Docker操作.md
GCC/: -as-needed.md  GCC-编译器30分钟入门教程.md  GDB追踪段错误.md  __attribute__.md  g++ 定义宏.md  踩过的坑.md
Git/: 常用Git操作.md
ISA/: test.cc
Linux/: test.sh  专 linux命令之set x详解.md  常用简单命令.md
MKL/: 简介.md
MKL/examples/: a.out  cblas_dgemm.cc
Onnx/: onnx.proto 解析.md  onnx.uml
Onnx/code_1/: CMakeLists.txt  log.txt  main.cc  onnx.pb.h
OnnxRuntime/: 1. 源码编译.md  2. C++ Demo.md
OnnxRuntime/code_1/: main.cc  util.h
OnnxRuntime/code_2/: main.cc
OnnxRuntime/code_3/: CMakeLists.txt  main.cc
PaddlePaddle/PaddleInference/: 1. 整体介绍.md  1.1 AnalysisPredictor详解.md  3. 算子体系介绍.md  4. CPU(MKLDNN)推理.md
PaddlePaddle/PaddleInference/ResNet50_demo/: CMakeLists.txt  resnet50_gpu.cc  resnet50_trt.cc
PaddlePaddle/PaddleNLP/: CMakeLists.txt  gpt_inference.cc  gpt_inference.py  简单使用.md
PaddlePaddle/PaddleSlim/: 静态离线量化.ipynb
Protobuf/: Protobuf简介.md
Protobuf/cpp_demo/: main.cc
Protobuf/python_demo/: addressbook.proto  demo.py
Python/: cls和self.ipynb  csv模块.ipynb  lambda 表达式.md  pybind11使用入门.md  python collections模块.ipynb  python 绘制曲线图.ipynb  python值传递和引用传递.IPYNB  python字符串操作的15种方法汇总.ipynb  typing_1_TypeHints.ipynb  typing_2_常用类型提示.ipynb  typing_3_类型别名.ipynb  typing_4_NewType.ipynb  typing_5_Calllable.ipynb  typing_6_TypeVar.ipynb  typing_7_AnyType.ipynb  typing_8_Union_Optional.ipynb  typing_9_Generic.ipynb  vscode python notebook 环境.md  函数装饰器.md  常用命令.md  生成器.ipynb  运算符重载.ipynb  迭代器.ipynb
Python/Parser/: demo1.py  基础用法.ipynb
Python/Python_Packaging/: 1.最小结构.md  2.依赖关系.md
Python/Python基础教程/: README.md
Python/__all__ 变量/: __all__.md
Python/test/: dev.txt  tensorrt_subgraph.txt  tmp.py
SHELL/: jottings.md  冒号后面跟等号、加号、减号、问号的意义.md
TensorRT/: CMakeLists.txt  IConvolutionLayer.cc  TRT使用笔记.md  notes.md  uml.plantuml
TensorRT/CustomReluDynaicPlugin/: CMakeLists.txt  custom_relu_dynamic_plugin.cu  custom_relu_dynamic_plugin.h  test.cc
TensorRT/code/: CMakeLists.txt
TensorRT/code/2.2/: CMakeLists.txt  LeakRelu_Plugin.cu  LeakRelu_Plugin.h  test.cc
cmake/: notes.md
cmake/2_target_link_libraries_and_ link_libraries/: difference.md
cmake/demo/2.4/: CMakeLists.txt  a.map  main.cc  test.cc
gtest/: gtest_installation_and_simple_use.md
gtest/test/: CMakeLists.txt  demo.cc
oneDNN/: InnerProductPrimitiveExample.cc  InnerProductPrimitiveExample_2.cc  InnerProductPrimitiveExample_quant.cc  README.md  a.out  cnn_inference_int8.cpp  example_utils.hpp  getting_started_cpp.cc  memory_format_propagation_1.cc  memory_format_propagation_2.cc
(+102 files in other folders)
